gccida/g0/defs_to_undefined
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/defs_to_undefined/src/ssa-ccp.c:677:4: error: expected ';' after expression
rtx reg; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/defs_to_undefined/src/ssa-ccp.c:677:5: error: use of undeclared identifier 'reg'
rtx reg; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/defs_to_undefined/src/ssa-ccp.c:679:4: error: expected ';' after expression
rtx v4; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/defs_to_undefined/src/ssa-ccp.c:679:5: error: use of undeclared identifier 'v4'
rtx v4; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/defs_to_undefined/src/ssa-ccp.c:680:4: error: expected ';' after expression
rtx v5; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/defs_to_undefined/src/ssa-ccp.c:680:5: error: use of undeclared identifier 'v5'
rtx v5; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/defs_to_undefined/src/ssa-ccp.c:692:1: error: use of undeclared identifier 'reg'
reg = currdef->ref->reg->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/defs_to_undefined/src/ssa-ccp.c:694:1: error: use of undeclared identifier 'reg'
reg = currdef->ref->reg; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/defs_to_undefined/src/ssa-ccp.c:695:21: error: use of undeclared identifier 'reg'
v3 = ( unsigned int)reg->fld[0].rtint >> 6; 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/defs_to_undefined/src/ssa-ccp.c:697:1: error: use of undeclared identifier 'v4'
v4 = currdef->ref->reg->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/defs_to_undefined/src/ssa-ccp.c:699:1: error: use of undeclared identifier 'v4'
v4 = currdef->ref->reg; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/defs_to_undefined/src/ssa-ccp.c:700:33: error: use of undeclared identifier 'v4'
ssa_edges->elms[v3] |= 1LL << ( v4->fld[0].rtint & 0x3F); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/defs_to_undefined/src/ssa-ccp.c:703:1: error: use of undeclared identifier 'v5'
v5 = currdef->ref->reg->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/defs_to_undefined/src/ssa-ccp.c:705:1: error: use of undeclared identifier 'v5'
v5 = currdef->ref->reg; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/defs_to_undefined/src/ssa-ccp.c:706:8: error: use of undeclared identifier 'v5'
values[v5->fld[0].rtuint].lattice_val = UNDEFINED; 
       ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/defs_to_undefined/src/obj/ssa-ccp.o] Error 1
